fix bg on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -89,7 +89,7 @@ summary {
 }
 @media screen and (max-width:990px) {
 	html {
-		background: url(bg.png?) repeat-y center center fixed;
+		background: url(../img/bg.png?) repeat-y center center fixed;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
 		-o-background-size: cover;
